--- a/inventory/templates/component/view_all.html
+++ b/inventory/templates/component/view_all.html
@@ -6,26 +6,28 @@
   <header class="content-header">
     <h1>Components</h1>
   </header>
-  
+
    <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
- 
+
 
   <table class="table table-striped table-bordered table-hover">
     <tr>
-        <th>Sku</th>
-        <th>Description</th>
-        <th>QTY</th>
+        <th>Item Name</th>
+        <th>Item Model</th>
+        <th>Item Price</th>
     </tr>
     {% for c in result %}
         <tr data-id="{{c.id}}">
-            <td><a href="{{ url_for('inventory.view_component', component_id=c.id)}}">{{ c.sku }}</a></td>
-            <td>{{ c.description }}</td>
+            <td><a href="{{ url_for('inventory.view_component', component_id=c.id)}}">{{ c.itemName }}</a></td>
+            <td>{{ c.itemModel }}</td>
+            <td>{{ c.itemPrice }}
             <td>{{ c.rfid_id }}</td>
+
         </tr>
 {% endfor %}
   </table>
